# limit_cycle_walking

./: .gitignore  CMakeLists.txt  MatlabScriptForRobot.m  MatlabScriptForRobot.m~  PlotMomentumStabilizer.m  README.md  comgimon.yaml~  lqr_controller.m  package.xml  run_walker.launch  run_walker.launch~  stuff_steering.m  traj_trials.m  trials_controller_bezier.m
2DOFWalker/: PartialLinearization.m  chunks.m  diff_t.m  exactLinearization.m  liebracket.m  partialLinearization.m  plotPlanar2DOF.m~  set_plot.m  solveXi.m  trial_control.m  update_plot.m
2DOFWalker/corke_model/: simulation_2walker.m  twoLinkWalkerModel.m
2DOFWalker/model/: Lagrange.m  kinematics.m  simulation_model.m
2DOFWalker/model_OLD/: dynamics.m  model.m  plot_model.m
2DOFWalker/model_extended/: Lagrange_extended.m  Lagrange_extended.m~  impact_extended.m  impact_extended.m~  kinematics_extended.m  matrices.mat  model_extended (old).m  model_extended.m  plot_model_extended.m  set_plot.m  simKinematics.m  simulationOLD.m  simulationOLDstable.m  simulation_model_extended.m  simulation_model_extended.m~  symKinematics.m~  updatateDynMatrices.m  update_plot.m
2DOFWalker/model_grizzle/: model_grizzle.m
2DOFWalker/model_grizzle_OLD/: kinematics_grizzle.m
2DOFWalker/model_grizzle_symm/: Lagrange_grizzle_symm.m  dynamics_grizzle_symm.m  plotGrizzleSymm.m  simulation_grizzle_symm.m
2DOFWalker/model_grizzle_symm_OLD/: kinematics_grizzle_symm.m  model_grizzle_symm.m
2DOFWalker/model_n_dof/: Lagrange_extended.m  Lagrange_n.m  autogen_robotVariables.m  autogenfile_DM.m  controllerWalker.m  dynamics_n.m  generateModel.m  impact_n.m  kinematics_extended.m  kinematics_extended.m~  kinematics_n.m  model_extended.m  model_n.m  plot_model_n.m  robotTree.m  setRobotParameters.m  simKinematics_n.m  simKinematics_n.m~  simulation_model_extended.m~  simulation_model_n.m  simulation_model_n.m~  trialVectorField.m  zeroDynamics.m
2DOFWalker/model_n_dof/control_walker/: PD_controller.m  calculateInitialConditions.m  controllerWalker.m  controllerWalker_ver1.m  finiteTime_stabilizer.m  generate_controller.m  partialLineariz_changeofVar.m  partialLinearization.m  partialLinearization_2link.m  templateController.m  zeroDynamics.m
2DOFWalker/model_n_dof/model_walker/: LagrangeRobot.m  Lagrange_n.m  diff_t.m  (+14 more)
WGCCM_three_link_walker_example/: walker_main.m
cartesio/: comanPlus_VC_stack.yaml
cogimon_walker/: CMakeLists.txt
cogimon_walker/VC_cartesio/: CMakeLists.txt  VC_cartesio.kdev4
cogimon_walker/VC_cartesio/.kdev4/: VC_cartesio.kdev4
cogimon_walker/VC_cartesio/problems/: comanPlus_VC_stack.yaml
cogimon_walker/launch/: comanPlus_VC.launch  comanPlus_virtualConstraints.launch  comanPlus_virtualConstraints_simple_example.launch
cogimon_walker/opensot/: CMakeLists.txt
configs/: cartesio_stack.yaml  walking_config.yaml  xbotcore_walk.yaml
include/: virtualConstraintsNode.h.orig
include/engine/: engine.h  lateral_plane.h  mpc_solver.h  sagittal_plane.h
include/param/: param.h
include/robot/: robot_state.h  step_state.h
include/ros/: footsteps_viz.h  walker_executor.h
include/step_machine/: foot_trajectory.h
include/walker/: sagittal_plane.h  step_machine.h  walker.h
launch/: cartesio_stack.launch  comanPlus_VC.launch
launch/old_launch/: comanPlus_slider.launch  comanPlus_virtualConstraints.launch  comanPlus_virtualConstraints_pennacchio.launch
param/: param_example.yaml  walking_param.yaml
src/: VC_run.cpp  kajitaTraj.cpp  robot_interface_ROS.cpp  virtualConstraintsNode.cpp  virtualConstraintsNode.cpp.orig
src/engine/: engine.cpp  lateral_plane.cpp  mpc_solver.cpp  sagittal_plane.cpp
src/param/: param.cpp
src/ros/: footsteps_viz.cpp  walker_executor.cpp  walker_server.cpp
src/step_machine/: foot_trajectory.cpp  state_machine.cpp.autosave
src/walker/: foot_trajectory.cpp  lateral_plane.cpp  sagittal_plane.cpp  step_machine.cpp  walker.cpp
srv/: SetCommands.srv
tests/: CMakeLists.txt  Test1.cpp  TestEngine.cpp  TestLateralPlane.cpp  TestParam.cpp  TestSagittalPlane.cpp  TestWalker.cpp
tests/configs/: test_param.yaml
virtual_constraints_walker/: CMakeLists.txt  package.xml  virtual_constraints_walker.kdev4
virtual_constraints_walker/.kdev4/: virtual_constraints_walker.kdev4
virtual_constraints_walker/cfg/: gains.cfg  walkingGains.cfg
virtual_constraints_walker/include/: mainNode.h  mapSteps.h  robot_interface.h  robot_interface_ROS.h  robot_states.h  stepper.h  virtualConstraintsNode.h
virtual_constraints_walker/include/footStabilizer/: footStabilizer.h
virtual_constraints_walker/include/param/: param.h
virtual_constraints_walker/include/robot/: robot_state.h  step_state.h
virtual_constraints_walker/include/stabilizer/: momentum_stabilizer.h
virtual_constraints_walker/include/step_machine/: step_machine.h
virtual_constraints_walker/include/walker/: lateral_plane.h  mpc_solver.h  sagittal_plane.h  walker.h
virtual_constraints_walker/include/zmp_sensor/: computeZMP.h  zmpSensor.h
virtual_constraints_walker/launch/: controller.launch  virtual_constraints_walker.launch  virtual_constraints_walker.launch~
virtual_constraints_walker/launch/walking_param/: param_controller.yaml  param_example.yaml  param_example.yaml~
virtual_constraints_walker/src/: .VC_run.cpp.kate-swp  .virtualConstraintsNode.cpp.kate-swp  VC_listener.cpp  VC_publisher.cpp  VC_run.cpp  VC_subscriber.cpp  kajitaTraj.cpp  mainNode.cpp  main_virtualConstraints.cpp  mapSteps.cpp  robot_interface_ROS.cpp  robot_state.cpp  stepper.cpp  virtualConstraintsNode.cpp  virtual_constraints.cpp
virtual_constraints_walker/src/footStabilizer/: compute_cp.cpp  footStabilizer.cpp
virtual_constraints_walker/src/stabilizer/: momentum_stabilizer.cpp
virtual_constraints_walker/src/step_machine/: step_machine.cpp
virtual_constraints_walker/src/utils/: operators.cpp
virtual_constraints_walker/src/walker/: foot_trajectory.cpp  lateral_plane.cpp  sagittal_plane.cpp  walker.cpp
virtual_constraints_walker/src/zmp_sensor/: measureZMP.cpp  zmpSensor.cpp
worlds/: cogimon.world  cogimon_gazebo.launch
(+46 files in other folders)
