<package format="2">
  <name>virtual_constraints_walker</name>
  <version>0.0.0</version>
  <description>
  This package defines virtual constraints for the COMAN+ robot
  </description>
  <maintainer email="francesco.ruscelli@iit.it">Francesco Ruscelli</maintainer>
  <license>IIT</license>



 <buildtool_depend>catkin</buildtool_depend> 

<!--  <build_depend>roscpp</build_depend> -->
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

<!--  <exec_depend>roscpp</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>


